# ghreq

./: CHANGELOG.md  README.rst  ghreq.py  pyproject.toml  requirements.txt  setup.cfg  tox.ini
.github/workflows/: test.yml
src/ghreq/: __init__.py
test/: test_client.py  test_endpoint.py  test_headers.py  test_requests.py  test_retrying.py  test_util.py  testinglib.py
