[metadata]
name = ghreq
version = attr:ghreq.__version__
description = Minimal yet well-configured GitHub API client
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = ghreq@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/ghreq

keywords =
    ###

classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    ###
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/ghreq
    Bug Tracker = https://github.com/jwodder/ghreq/issues

[options]
packages = find_namespace:
package_dir =
    =src
include_package_data = True
python_requires = >= 3.8
install_requires =
    requests ~= 2.20

[options.packages.find]
where = src

[mypy]
allow_incomplete_defs = False
allow_untyped_defs = False
ignore_missing_imports = False
# <https://github.com/python/mypy/issues/7773>:
no_implicit_optional = True
implicit_reexport = False
local_partial_types = True
pretty = True
show_error_codes = True
show_traceback = True
strict_equality = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
